@@ -52,7 +52,7 @@ module Fairy
   CONF.POSTQUEUE_MAX_TRANSFER_SIZE = 80000
 ##CONF.POOLQUEUE_POOL_THRESHOLD = 1000
   CONF.POOLQUEUE_POOL_THRESHOLD = 4000
-  CONF.ONMEMORY_SIZEDQUEUE_SIZE = 64000
+  CONF.ONMEMORY_SIZEDQUEUE_SIZE = 10000
 ##CONF.FILEBUFFEREDQUEUE_THRESHOLD = 10000/2
 #CONF.FILEBUFFEREDQUEUE_THRESHOLD = 100000/2
 
